Fixed cart product list issue, added final amount to pay, added unit test cases for products