@@ -1,186 +1,146 @@
 package com.shopingcart.shopingcart;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.shopingcart.shopingcart.controller.ProductController;
 import com.shopingcart.shopingcart.data.ProductDto;
+import com.shopingcart.shopingcart.responses.SuccessResponse;
 import com.shopingcart.shopingcart.service.ProductService;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.mockito.MockitoAnnotations;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 
-import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import static org.hamcrest.Matchers.*;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ProductControllerTest {
-
-    private static final String API_URL = "/api/products";
-    private static final Long PRODUCT_ID = 1L;
-    private static final String PRODUCT_NAME = "Test Product";
-    private static final MediaType APPLICATION_JSON = MediaType.APPLICATION_JSON;
-
-    @Mock
-    private ProductService productService;
+class ProductControllerTest {
 
     @InjectMocks
     private ProductController productController;
 
-    private MockMvc mockMvc;
+    @Mock
+    private ProductService productService;
 
-    @Before
-    public void setup() {
-        mockMvc = MockMvcBuilders.standaloneSetup(productController).build();
-    }
-
-    private ProductDto getProduct() {
-        return new ProductDto(PRODUCT_ID, PRODUCT_NAME, 10.99, 15.99, "Test description", "500ml", "Manufacturer", "Distributor", List.of("image1.jpg", "image2.jpg"));
-    }
-
-    private String asJsonString(Object obj) {
-        ObjectMapper mapper = new ObjectMapper();
-        try {
-            return mapper.writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    public void testGetAllProducts() throws Exception {
-        List<ProductDto> products = new ArrayList<>();
-        products.add(getProduct());
-        products.add(new ProductDto(2L, "Product 2", 9.99, 14.99, "Description 2", "250ml", "Manufacturer 2", "Distributor 2", List.of("image3.jpg", "image4.jpg")));
-        when(productService.getAllProducts()).thenReturn(products);
+    void testGetAllProducts_Success() {
+        ProductDto product1 = new ProductDto();
+        ProductDto product2 = new ProductDto();
+        when(productService.getAllProducts()).thenReturn(Arrays.asList(product1, product2));
 
-        mockMvc.perform(get(API_URL))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2));
+        ResponseEntity<List<ProductDto>> response = productController.getAllProducts();
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(2, response.getBody().size());
+        verify(productService, times(1)).getAllProducts();
     }
 
     @Test
-    public void testGetProductByIdExisting() throws Exception {
-        ProductDto product = getProduct();
-        when(productService.getProductById(PRODUCT_ID)).thenReturn(product);
+    void testGetProductById_Success() {
+        Long productId = 1L;
+        ProductDto productDto = new ProductDto();
+        when(productService.getProductById(productId)).thenReturn(productDto);
 
-        mockMvc.perform(get(API_URL + "/" + PRODUCT_ID))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(is(PRODUCT_ID.intValue())))
-                .andExpect(jsonPath("$.productName").value(is(PRODUCT_NAME)));
+        ResponseEntity<ProductDto> response = productController.getProductById(productId);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(productDto, response.getBody());
+        verify(productService, times(1)).getProductById(productId);
     }
 
     @Test
-    public void testGetProductByIdNonExisting() throws Exception {
-        when(productService.getProductById(PRODUCT_ID)).thenReturn(null);
+    void testGetProductById_NotFound() {
+        Long productId = 1L;
+        when(productService.getProductById(productId)).thenReturn(null);
 
-        mockMvc.perform(get(API_URL + "/" + PRODUCT_ID))
-                .andExpect(status().isNotFound());
+        ResponseEntity<ProductDto> response = productController.getProductById(productId);
+
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        verify(productService, times(1)).getProductById(productId);
     }
 
     @Test
-    public void testCreateProduct() throws Exception {
-        ProductDto product = getProduct();
-        when(productService.createProduct(any(ProductDto.class))).thenReturn(product);
+    void testCreateProduct_Success() {
+        ProductDto productDto = new ProductDto();
+        when(productService.createProduct(any(ProductDto.class))).thenReturn(productDto);
 
-        mockMvc.perform(post(API_URL)
-                        .contentType(APPLICATION_JSON)
-                        .content(asJsonString(product)))
-                .andExpect(status().isCreated())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(is(PRODUCT_ID.intValue())))
-                .andExpect(jsonPath("$.productName").value(is(PRODUCT_NAME)));
+        ResponseEntity<ProductDto> response = productController.createProduct(productDto);
+
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertEquals(productDto, response.getBody());
+        verify(productService, times(1)).createProduct(any(ProductDto.class));
     }
 
     @Test
-    public void testUpdateProductExisting() throws Exception {
-        ProductDto product = getProduct();
-        when(productService.updateProduct(any(ProductDto.class))).thenReturn(product);
+    void testUpdateProduct_Success() {
+        ProductDto productDto = new ProductDto();
+        when(productService.updateProduct(any(ProductDto.class))).thenReturn(productDto);
 
-        mockMvc.perform(put(API_URL)
-                        .contentType(APPLICATION_JSON)
-                        .content(asJsonString(product)))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(is(PRODUCT_ID.intValue())))
-                .andExpect(jsonPath("$.productName").value(is(PRODUCT_NAME)));
+        ResponseEntity<ProductDto> response = productController.updateProduct(productDto);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(productDto, response.getBody());
+        verify(productService, times(1)).updateProduct(any(ProductDto.class));
     }
 
     @Test
-    public void testUpdateProductNonExisting() throws Exception {
+    void testUpdateProduct_NotFound() {
+        ProductDto productDto = new ProductDto();
         when(productService.updateProduct(any(ProductDto.class))).thenReturn(null);
 
-        mockMvc.perform(put(API_URL)
-                        .contentType(APPLICATION_JSON)
-                        .content(asJsonString(getProduct())))
-                .andExpect(status().isNotFound());
+        ResponseEntity<ProductDto> response = productController.updateProduct(productDto);
+
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        verify(productService, times(1)).updateProduct(any(ProductDto.class));
     }
 
     @Test
-    public void testDeleteProductExisting() throws Exception {
-        doNothing().when(productService).deleteProduct(PRODUCT_ID);
+    void testDeleteProduct_Success() {
+        Long productId = 1L;
+        SuccessResponse successResponse = new SuccessResponse("Product deleted successfully", HttpStatus.OK.value());
+        when(productService.deleteProduct(productId)).thenReturn(successResponse);
 
-        mockMvc.perform(delete(API_URL + "/" + PRODUCT_ID))
-                .andExpect(status().isNoContent());
-    }
-    @Test
-    public void testDeleteProductNonExisting() throws Exception {
-        doThrow(new RuntimeException()).when(productService).deleteProduct(PRODUCT_ID);
+        ResponseEntity<SuccessResponse> response = productController.deleteProduct(productId);
 
-        mockMvc.perform(delete(API_URL + "/" + PRODUCT_ID))
-                .andExpect(status().isInternalServerError());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(successResponse, response.getBody());
+        verify(productService, times(1)).deleteProduct(productId);
     }
 
     @Test
-    public void testProductExistsTrue() throws Exception {
-        when(productService.productExists(PRODUCT_ID)).thenReturn(true);
+    void testProductExists_Success() {
+        Long productId = 1L;
+        when(productService.productExists(productId)).thenReturn(true);
 
-        mockMvc.perform(get(API_URL + "/exists/" + PRODUCT_ID))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$").value(is(true)));
+        ResponseEntity<Boolean> response = productController.productExists(productId);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(response.getBody());
+        verify(productService, times(1)).productExists(productId);
     }
 
     @Test
-    public void testProductExistsFalse() throws Exception {
-        when(productService.productExists(PRODUCT_ID)).thenReturn(false);
+    void testProductExistsByProductName_Success() {
+        String productName = "Test Product";
+        when(productService.productExistsByProductName(productName)).thenReturn(true);
 
-        mockMvc.perform(get(API_URL + "/exists/" + PRODUCT_ID))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$").value(is(false)));
-    }
+        ResponseEntity<Boolean> response = productController.productExistsByProductName(productName);
 
-    @Test
-    public void testProductExistsByProductNameTrue() throws Exception {
-        when(productService.productExistsByProductName(PRODUCT_NAME)).thenReturn(true);
-
-        mockMvc.perform(get(API_URL + "/exists/name/" + PRODUCT_NAME))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$").value(is(true)));
-    }
-
-    @Test
-    public void testProductExistsByProductNameFalse() throws Exception {
-        when(productService.productExistsByProductName(PRODUCT_NAME)).thenReturn(false);
-
-        mockMvc.perform(get(API_URL + "/exists/name/" + PRODUCT_NAME))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(APPLICATION_JSON))
-                .andExpect(jsonPath("$").value(is(false)));
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(response.getBody());
+        verify(productService, times(1)).productExistsByProductName(productName);
     }
 }
